solve problems with view on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,10 @@ p {
 
 .hero {
   background: url("../images/notebook.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-attachment: fixed;
   background-size: cover;
   width: 100%;
   height: 100vh; }
@@ -74,7 +78,7 @@ p {
 .hero-content {
   position: absolute;
   top: 40%;
-  left: 5%; }
+  left: 10%; }
   .hero-content h1 {
     font-size: 2rem;
     color: #F9BA22;
@@ -261,7 +265,7 @@ p {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  padding: 30px 50px;
+  padding: 50px;
   max-width: 700px;
   margin: 0 auto; }
 
@@ -313,7 +317,7 @@ p {
   padding-bottom: 30px; }
 
 .projects-list {
-  padding: 30px 10px;
+  padding: 50px 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
