--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -13,6 +13,7 @@ p {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-attachment: fixed;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -20,7 +21,7 @@ p {
 .hero-content {
     position: absolute;
     top: 40%;
-    left: 5%;
+    left: 10%;
     
 
         h1 {
