--- a/sass/sections/_projects.scss
+++ b/sass/sections/_projects.scss
@@ -2,7 +2,7 @@
     padding-bottom: 30px;
 }
 .projects-list {
-    padding: 30px 10px;
+    padding: 50px 10px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
