--- a/sass/sections/_skills.scss
+++ b/sass/sections/_skills.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  padding: 30px 50px;
+  padding: 50px;
   max-width: 700px;
   margin: 0 auto;
 
